src/test/deca/context/invalid/created/sans_objet/affectation_int_5.deca
// Description:
//    Programme minimaliste utilisant int.
//
// Resultats:
//   erreur: ligne 12 : token recognition error
//
// Historique:
//    cree le 01/01/2024

{
        int x ;
        x= 'a';
}